--- a/ffm-java-22-1-front-end/src/Css/Header.css
+++ b/ffm-java-22-1-front-end/src/Css/Header.css
@@ -1,3 +1,12 @@
-header {
-    position: center;
+.header {
+    font-family: Georgia;
+    text-align: left;
+    padding: 60px;
+    background: #1abc9c;
+    color: white;
+    font-size: 30px;
+    opacity: 0.5;
+}
+.header:hover {
+    opacity: 1.0;
 }
