--- a/ffm-java-22-1-front-end/src/css/ToDoCard.css
+++ b/ffm-java-22-1-front-end/src/css/ToDoCard.css
@@ -20,10 +20,10 @@
     text-shadow: 3px 3px white;
     border: solid 2px black;
     border-radius: 0.5pc;
-    box-shadow: 4px 4px #898989;
+    box-shadow: 2px 5px 5px 0 #CCCCCC;
     display: flex;
     flex-direction: column;
-    margin: 20px;
+    margin: 20px 0 0 0;
     padding: 2em;
     width: 300px;
     height: auto;
